--- a/CoCoworkView/CoCowork.UI.csproj
+++ b/CoCoworkView/CoCowork.UI.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoCowork.DataLayer\CoCowork.DataLayer.csproj" />
+  </ItemGroup>
+
 </Project>
