Changed relations between projects
UI to BL, Dl to DB, BL to DL

--- a/CoCoworkView/CoCowork.UI.csproj
+++ b/CoCoworkView/CoCowork.UI.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CoCowork.DataLayer\CoCowork.DataLayer.csproj" />
+    <ProjectReference Include="..\CoCowork.BusinessLayer\CoCowork.BusinessLayer.csproj" />
   </ItemGroup>
 
 </Project>
