Added select places that are not in mini office

--- a/CoCowork.BusinessLayer/CoCowork.BusinessLayer.csproj
+++ b/CoCowork.BusinessLayer/CoCowork.BusinessLayer.csproj
@@ -9,4 +9,8 @@
     <Folder Include="Services\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\CoCowork.DataLayer\CoCowork.DataLayer.csproj" />
+  </ItemGroup>
+
 </Project>
