--- a/CoCowork.BusinessLayer/CoCowork.BusinessLayer.csproj
+++ b/CoCowork.BusinessLayer/CoCowork.BusinessLayer.csproj
@@ -5,8 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
-    <Folder Include="Services\" />
+    <PackageReference Include="AutoMapper" Version="10.1.1" />
   </ItemGroup>
 
   <ItemGroup>
