MainWindowScratch is ready + helpers for grids

--- a/CoCoworkView/CoCowork.UI.csproj
+++ b/CoCoworkView/CoCowork.UI.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\CoCowork.DataLayer\CoCowork.DataLayer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+  </ItemGroup>
+
 </Project>
