--- a/CoCoworkView/CoCowork.UI.csproj
+++ b/CoCoworkView/CoCowork.UI.csproj
@@ -7,6 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Expression.Blend.Sdk3" Version="1.0.1340.1" />
+    <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\CoCowork.BusinessLayer\CoCowork.BusinessLayer.csproj" />
   </ItemGroup>
 
