--- a/CoCoworkView/CoCowork.UI.csproj
+++ b/CoCoworkView/CoCowork.UI.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Expression.Blend.Sdk3" Version="1.0.1340.1" />
+    <PackageReference Include="MaterialDesignThemes" Version="4.3.0" />
     <PackageReference Include="System.Windows.Interactivity.WPF" Version="2.0.20525" />
   </ItemGroup>
 
